--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Loek Spoelder</title>
-    <link href="css/index.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script src="javascript/javascript.js" defer></script>
   </head>
   <body>
-    <div id="windowname"><h4>LS-DOS Prompt</h4></div>
-    <!--<p id="windowname">LS-DOS Prompt</p>
-    <p id="button1">_</p>
-    <p id="button2">❐</p>
-    <p id="button3">✖</p>-->
+    <div id="windowname">
+      <h3>LS-DOS Prompt</h3>
+      <button class="buttons">✖</button>
+      <button class="buttons">❐</button>
+      <button class="buttons">−</button>
+    </div>
     <div id="navbar"></div>
     <div id="window">
       <p>
