added info and buttons

--- a/index.html
+++ b/index.html
@@ -10,15 +10,98 @@
   <body>
     <div id="windowname">
       <h3>LS-DOS Prompt</h3>
-      <button class="buttons">✖</button>
+      <button class="buttons" onclick="window.close();">✖</button>
       <button class="buttons">❐</button>
       <button class="buttons">−</button>
     </div>
-    <div id="navbar"></div>
+    <div id="navbar">
+      <a href="#home">HOME</a>
+      <a href="#skills">SKILLS</a>
+      <a href="#projects">PROJECTS</a>
+    </div>
     <div id="window">
+      <p id="home">
+        ██╗──────██████╗─███████╗██╗──██╗────███████╗██████╗──██████╗─███████╗██╗─────██████╗─███████╗██████╗─<br>
+        ██║─────██╔═══██╗██╔════╝██║─██╔╝────██╔════╝██╔══██╗██╔═══██╗██╔════╝██║─────██╔══██╗██╔════╝██╔══██╗<br>
+        ██║─────██║───██║█████╗──█████╔╝─────███████╗██████╔╝██║───██║█████╗──██║─────██║──██║█████╗──██████╔╝<br>
+        ██║─────██║───██║██╔══╝──██╔═██╗─────╚════██║██╔═══╝─██║───██║██╔══╝──██║─────██║──██║██╔══╝──██╔══██╗<br>
+        ███████╗╚██████╔╝███████╗██║──██╗────███████║██║─────╚██████╔╝███████╗███████╗██████╔╝███████╗██║──██║<br>
+        ╚══════╝─╚═════╝─╚══════╝╚═╝──╚═╝────╚══════╝╚═╝──────╚═════╝─╚══════╝╚══════╝╚═════╝─╚══════╝╚═╝──╚═╝
+      </p>
+      <p>My name is Loek Spoelder, I've been interested in computers and hardware for a long time, done a lot, 
+        learnt even more. Here I will show you some of the incredible doohickies I’ve created and doodads I’ve 
+        mastered over the years.
+      </p>
+      <p>&nbsp;</p>
+      <p id="skills">
+         _______ _     _ _____               _______<br>
+         |______ |____/    |   |      |      |______<br>
+         ______| |    \_ __|__ |_____ |_____ ______|<br>
+                                                    
+      </p>
+      <Div class="flexbox">
+        <div>
+          <p>Proficiencies</p>
+          <ul>
+            <li>Blender</li>
+            <li>Cisco Packet tracer</li>
+            <li>Computer hardware</li>
+            <li>Embedded systems</li>
+            <li>Data Representation</li>
+            <li>Regular Expressions</li>
+            <li>Algorithms</li>
+            <li>Cybersecurity/Hacking</li>
+            <li>Quantum Computing</li>
+          </ul>
+        </div>
+        <div>
+          <p>Languages</p>
+          <ul>
+            <li>Python</li>
+            <li>HML/CSS</li>
+            <li>Javascript</li>
+            <li>(Linux) Terminal</li>
+            <li>C++/C</li>
+            <li>SQL</li>
+          </ul>
+        </div>
+      </Div>
+      <p>&nbsp;</p>
+      <p id="projects">
+          _____   ______  _____  _____ _______ _______ _______ _______<br>
+         |_____] |_____/ |     |   |   |______ |          |    |______<br>
+         |       |    \_ |_____| __|   |______ |_____     |    ______|<br>
+                                                                              
+      </p>
+      <Div class="flexbox2" id="projects">
+        <div>
+          <p>Cybersecurity</p>
+          <p>
+            One of the big projects I did was a hacking challenge to get root access to a given IP-adress, that’s it, 
+            no additional information was given. Eventually me and my partner managed to do it the fastest out of the 
+            3 groups attempting it.
+          </p>
+        </div>
+        <div>
+          <p>Quantumcomputing</p>
+          <p>
+            Another big project I did was participating in the Quantum Quest: a five week course hosted by a handful 
+            of universities in Europe every other year going into the basics and not-so-basics of quantum computing.
+          </p>
+        </div>
+        <div>
+          <p>FPVRC-Car</p>
+          <p>
+            This was my final school project, a first person view remote controlled car. It started off pretty strong
+             but in the end we faced too many obstacles to meet the deadline so we never got a finished product. It ended
+              up teaching me a lot about personal projects, self-study, C++, embedded systems and RC-cars.
+          </p>
+        </div>
+      </Div>
+      <p>&nbsp;</p>
       <p>
         Loek Spoelder [Version 00.1.ALPHA]<br>
-        (LS) 2022 Loek Spoelder site. No rights reserved.
+        (LS) 2025 Loek Spoelder site. All rights reserved.
       </p>
       <p>&nbsp;</p>
       <p>
@@ -29,8 +112,6 @@
         ██████████████║<br>
         ╚═════════════╝
       </p>
-      <p>&nbsp;</p>
-      <p>hiiii hlelooooo</p>
     </div>
   </body>
 </html>
