--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Loek Spoelder</title>
-    <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link href="index.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <script src="javascript/javascript.js" defer></script>
   </head>
   <body>
     <div id="windowname">
@@ -15,9 +14,14 @@
       <button class="buttons">−</button>
     </div>
     <div id="navbar">
-      <a href="#home">HOME</a>
-      <a href="#skills">SKILLS</a>
-      <a href="#projects">PROJECTS</a>
+      <a href="#home">Home</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <div id="right">
+        <a href="mailto:spoelderloek@gmail.com">EMail</a>
+        <a href="https://www.instagram.com/loek.spoelder/" target="_blank">Instagram</a>
+        <a href="https://github.com/LoekSpoelder" target="_blank">GitHub</a>
+      </div>
     </div>
     <div id="window">
       <p id="home">
@@ -39,12 +43,13 @@
          ______| |    \_ __|__ |_____ |_____ ______|<br>
                                                     
       </p>
-      <Div class="flexbox">
+      <Div class="flexbox1">
         <div>
           <p>Proficiencies</p>
           <ul>
             <li>Blender</li>
             <li>Cisco Packet tracer</li>
+            <li>GitHub</li>
             <li>Computer hardware</li>
             <li>Embedded systems</li>
             <li>Data Representation</li>
@@ -73,7 +78,7 @@
          |       |    \_ |_____| __|   |______ |_____     |    ______|<br>
                                                                               
       </p>
-      <Div class="flexbox2" id="projects">
+      <Div class="flexbox2">
         <div>
           <p>Cybersecurity</p>
           <p>
@@ -92,15 +97,15 @@
         <div>
           <p>FPVRC-Car</p>
           <p>
-            This was my final school project, a first person view remote controlled car. It started off pretty strong
-             but in the end we faced too many obstacles to meet the deadline so we never got a finished product. It ended
-              up teaching me a lot about personal projects, self-study, C++, embedded systems and RC-cars.
+            This was my final school project, a first person view remote controlled car. It started off pretty strong 
+            but in the end we faced too many obstacles to meet the deadline so we never got a finished product. It ended 
+            up teaching me a lot about personal projects, self-study, C++, embedded systems and RC-cars.
           </p>
         </div>
       </Div>
       <p>&nbsp;</p>
       <p>
-        Loek Spoelder [Version 00.1.ALPHA]<br>
+        Loek Spoelder [Version 00.2.SIGMA]<br>
         (LS) 2025 Loek Spoelder site. All rights reserved.
       </p>
       <p>&nbsp;</p>
