--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
       <div id="right">
-        <a href="mailto:spoelderloek@gmail.com">EMail</a>
+        <a href="mailto:spoelderloek@gmail.com">E-Mail</a>
         <a href="https://www.instagram.com/loek.spoelder/" target="_blank">Instagram</a>
         <a href="https://github.com/LoekSpoelder" target="_blank">GitHub</a>
       </div>
