added 3d printing in proficiencies

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <li>Cisco Packet tracer</li>
             <li>GitHub</li>
             <li>Computer hardware</li>
+            <li>3D Printing</li>
             <li>Embedded systems</li>
             <li>Data Representation</li>
             <li>Regular Expressions</li>
