added the T to HTML

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <p>Languages</p>
           <ul>
             <li>Python</li>
-            <li>HML/CSS</li>
+            <li>HTML/CSS</li>
             <li>Javascript</li>
             <li>(Linux) Terminal</li>
             <li>C++/C</li>
